<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.balladares.microtareas.Microtask3">
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings1"
        android:icon="@drawable/ic_search_d"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/action_settings2"
        android:icon="@drawable/ic_person_d"

        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/action_settings3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/action_settings4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/action_settings5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings6"
        android:orderInCategory="100"
        android:title="@string/action_settings6"
        app:showAsAction="never" />
</menu>
