<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/btnMicrotask1"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="StartMicrotask1"
        android:text="@string/activityLabelMicrotask1"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMicrotask2a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMicrotask2a"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:lines="2"
        android:onClick="StartMicrotask2a"
        android:singleLine="false"
        android:text="@string/activityLabelMicrotask2a"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMicrotask3"
        app:layout_constraintEnd_toStartOf="@+id/btnMicrotask2b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnMicrotask1"
        app:layout_constraintTop_toBottomOf="@+id/btnMicrotask1" />

    <Button
        android:id="@+id/btnMicrotask3"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="StartMicrotask3"
        android:text="@string/activityLabelMicrotask3"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMicrotask4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMicrotask2a" />

    <Button
        android:id="@+id/btnMicrotask4"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/activityLabelMicrotask4"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMicrotask3" />

    <Button
        android:id="@+id/btnMicrotask2b"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:lines="2"
        android:onClick="StartMicrotask2b"
        android:singleLine="false"
        android:text="@string/activityLabelMicrotask2b"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMicrotask2a"
        app:layout_constraintEnd_toStartOf="@+id/btnMicrotask2c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMicrotask2a"
        app:layout_constraintTop_toTopOf="@+id/btnMicrotask2a" />

    <Button
        android:id="@+id/btnMicrotask2c"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:lines="2"
        android:onClick="StartMicrotask2c"
        android:singleLine="false"
        android:text="@string/activityLabelMicrotask2c"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMicrotask2b"
        app:layout_constraintEnd_toEndOf="@+id/btnMicrotask1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMicrotask2b"
        app:layout_constraintTop_toTopOf="@+id/btnMicrotask2b" />
</android.support.constraint.ConstraintLayout>